# FloatChat-SIH

./: .gitignore  README.md  docker-compose.local.yml  docker-compose.yml  package-lock.json  package.json
client/: .env  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.css  App.tsx  index.css  main.tsx
client/src/components/: CustomGoogleSignIn.tsx  Dashboard.tsx  Earth.tsx  EarthMainContent.tsx  EarthSidebar.tsx  GoogleSignIn.tsx  MobilePointPanel.tsx  PrivateRoute.tsx
client/src/utils/: axiosInstance.ts
fastapi-server/: .env  .env.example  Dockerfile  Makefile  README.md  agent.py  main.py  pyproject.toml  tools.py
fastapi-server/app/: db.py  main.py
fastapi-server/app/api/: chat.py  chat_api.py
fastapi-server/app/schemas/: chat.py
fastapi-server/app/services/: chatbot.py  tools.py
fastapi-server/app/utils/: POSTGIS_SETUP.md  database_config.ini  postgres.py  profiles.py  test.py
fastapi-server/test-runs/: 2025-09-18.txt  2025-09-19 18.40.07  2025-09-19 22.35.08  2025-09-20 00.48.08  2025-09-20 19.24.04 file not found  error  model_request.txt
fastapi-server/utils/: argo-ds-test.py  argo_profiles.csv  azure-test.py  database_config.ini  nc-to-csv.py  postgres.py  profiles.py  requirements.txt  setup_postgres.bat  test.py
nodejs-server/: .env  package-lock.json  package.json
nodejs-server/src/: app.js  index.js
nodejs-server/src/controllers/: chat.controller.js  profile.controller.js
nodejs-server/src/db/: postgres.js
nodejs-server/src/middleware/: clerk.middleware.js
nodejs-server/src/models/: chat.model.js  message.model.js
nodejs-server/src/routes/: chat.route.js  profile.route.js
nodejs-server/src/utils/: axiosInstance.js
(+35 files in other folders)
