[project]
name = "fastapi-server"
version = "0.1.0"
description = "FastAPI backend server for Argo data processing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argopy>=1.3.0",
    "fastapi>=0.116.1",
    "geopandas>=1.1.1",
    "loguru>=0.7.3",
    "pydantic-ai>=1.0.6",
]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
start = "uvicorn main:app --reload"
