
[project]
name = "fastapi-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "geoalchemy2>=0.18.0",
    "shapely>=2.1.1",
    "uvicorn>=0.35.0",
    "argopy>=1.3.0",
    "geopandas>=1.1.1",
    "pydantic-ai>=1.0.6",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "psycopg2[binary]>=2.9.10",
    "psycopg>=3.2.10",
]
